# tight-binding

./: .coverage  .gitignore  AsymTightBinding.ipynb  Bandstructure.ipynb  DensityOfStates.ipynb  ExactModel.ipynb  Processing.ipynb  README.md  TightBinding.ipynb  bandstructure.py  bulk_properties.py  common.py  density_of_states.py  fermi_surface.py  hamiltonian_symmetry.py  json_tb_format.py  kpaths.py  pyproject.toml  qespresso_interface.py  requirements.txt  slater_koster.py  symmetry.py  tight_binding.py  tight_binding_asym.py  unit_tests.py  unitary_representations.py  wannier90_tb_format.py
.github/workflows/: python-package.yml
examples/: ExampleQE.ipynb  bulk_copper.py  cu_asym_4.json  dos_copper.py  fermi_surface_copper.py  fit_copper.py
examples/qe-data/: cu.xml
notebooks/: AsymTightBinding.ipynb  Bandstructure.ipynb  DensityOfStates.ipynb  ExactModel.ipynb  ExampleQE.ipynb  Performance.ipynb  Processing.ipynb  Projections.ipynb  SlaterKosterTightBinding.ipynb  SymmetryTests.ipynb  TightBinding.ipynb  asym_cu.json  asym_cu2.json  asym_nitinol.json  asym_nitinol2.json  asym_nitinol3.json  asym_nitinol4.json  asym_nitinol6.json  bruinsma_improved.json  bruinsma_niti.json  cu_asym_3.json  ni.repr  ni_asym.repr  ni_asym2.repr  ni_asym_18.json  niti_18_de.json  setup.py  soft_sym_nitinol1.json  soft_sym_nitinol2.json  soft_sym_nitinol3.json  sym_nitinol11.json  sym_nitinol13.json
notebooks/qe-data/: nitinol_0K.xml  nitinol_0K_nscf_8.xml  nitinol_0K_small.xml  nitinol_2_993.xml
qe-data/: cu.xml
src/tight_binding_redweasel/: __init__.py  bandstructure.py  bulk_properties.py  density_of_states.py  density_of_states_old.py  fermi_surface.py  hamiltonian_symmetry.py  json_tb_format.py  kpaths.py  linalg.py  logger.py  loss.py  qespresso_interface.py  slater_koster.py  smearing.py  symmetry.py  tight_binding.py  tight_binding_asym.py  unitary_representations.py  wannier90_tb_format.py
tests/: test_benchmarks.py  test_bulk.py  test_density_of_states.py  test_equivalence.py  test_free_electrons.py  test_kpath.py  test_model.json  test_optimizers.py  test_symmetry.py
