 [build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tight_binding_redweasel"
version = "0.0.1"
authors = [
  { name="Henrik Dick", email="hdick@physik.uni-bielefeld.de" },
]
description = "A package implementing tight binding fits and advanced symmetrisation operations. It also contains various useful utilities for displaying bandstructure data."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy >= 1.23.5',
  'scipy >= 1.14.0',
  'scikit-image >= 0.20.0',
  'matplotlib >= 3.8.0',
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"

[project.urls]
Homepage = "https://github.com/redweasel/tight-binding"
Issues = "https://github.com/redweasel/tight-binding/issues"
